# diffr-h

./: .gitignore  AUTHORS  INSTALL.md  NEWS.md  README.md  cp.patch  diffr.cabal  kernel01.txt
diff/: Main.hs
patch/: Main.hs
src/Diffr/: Main.hs  Patch.hs  Test.hs  Util.hs
src/Diffr/Diff/: Main.hs
src/Diffr/Util/: ArgumentsProcessor.hs
src/diffr/diff/: Main.hs
src/diffr/patch/: Main.hs
test/: TestSuite.hs
test/Diffr/: UtilTest.hs
