Name:               diffr
Version:            0.2
Description:        Intelligent diff/patch tool that knows how to copy and move, has an 'r' at the end of its name.
License:            GPL-3
License-file:       LICENCE
Author:             Amaury Couste, Jakub Kozlowski, William Martin
Maintainer:
Build-Type:         Simple
Cabal-Version:      >=1.2

Library
  Build-Depends:    base >= 4
  Hs-Source-Dirs:   src
  Exposed-Modules:  Diffr.Util.ArgumentsProcessor
  ghc-options:      -Wall

Executable diffr
  Main-is:          Diffr/Diff/Main.hs
  Build-Depends:    base >= 4
  Other-Modules:    Diffr.Util.ArgumentsProcessor
  Hs-Source-Dirs:   src
  ghc-options:      -Wall

Executable patchr
  Main-is:          src/Diffr/Patch/Main.hs
  Build-Depends:    base >= 4
  ghc-options:      -Wall
